# ygo-card-image-hosting

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: configuration.mdx  installation.mdx  introduction.mdx  running-the-project.mdx
docs/src/content/docs/guides/: serving-goat-format-cards.mdx  serving-hat-format-cards.mdx
scripts/: run_image_uploader.sh  run_terraform.sh
src/: config.py  main.py
src/utils/: logging.py  s3.py  types.py
terraform/: .gitignore  main.tf  providers.tf  variables.tf
terraform/modules/card_cdn/: main.tf  outputs.tf  variables.tf
